# besu-ethereum-ibc-lcp

./: .gitmodules  Makefile  README.md  go.mod  go.sum
.devcontainer/: devcontainer.json  install_foundry.sh  oncreate.sh
enclave/: Cargo.toml
enclave/src/: lib.rs
relayer/: main.go
tests/e2e/cases/besu2eth/: Makefile
tests/e2e/cases/besu2eth/configs/templates/: ibc-0-zkdcap.json.tpl  ibc-0.json.tpl  ibc-1-zkdcap.json.tpl  ibc-1.json.tpl
tests/e2e/cases/besu2eth/scripts/: gen_rly_config.sh  handshake  init-rly  test-tx
tests/e2e/chains/besu/: Makefile  compose.yml
tests/e2e/chains/besu/chain/: Dockerfile
tests/e2e/chains/besu/contracts/: hardhat.config.js  package-lock.json  package.json
tests/e2e/chains/besu/contracts/contracts/: Dependencies.sol
tests/e2e/chains/besu/contracts/scripts/: deploy.js  sendPacket.js
tests/e2e/chains/ethereum/: Dockerfile.geth  Dockerfile.lodestar  Dockerfile.npm  Makefile  compose.yaml  compose.yml
tests/e2e/chains/ethereum/contracts/: hardhat.config.js  package-lock.json  package.json
tests/e2e/chains/ethereum/execution/: genesis.json
tests/e2e/chains/ethereum/tools/deposit/: tsconfig.json
tests/e2e/scripts/: init_lcp.sh  run_e2e_test.sh
