[package]
name = "enclave"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
name = "proxy_enclave"
crate-type = ["staticlib"]

[dependencies]
enclave-runtime = { git = "https://github.com/datachainlab/lcp", rev = "v0.2.10" }
besu-qbft-elc = { git = "https://github.com/datachainlab/besu-qbft-elc", rev = "v0.1.3", default-features = false }
ethereum-elc = { git = "https://github.com/datachainlab/ethereum-elc", rev = "v0.0.17", default-features = false }

[patch."crates-io"]
getrandom = { git = "https://github.com/datachainlab/getrandom-sgx-lite" }
# TODO these patches would be better as optional
sha2-0106 = { git = "https://github.com/bluele/hashes", branch = "0.10.6-sha256-hwa-disabled", package = "sha2" }
sha2-099 = { git = "https://github.com/bluele/hashes", branch = "0.9.9-sha256-hwa-disabled", package = "sha2" }

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
